--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ psycopg2 = "^2.9.6"
 djangorestframework = "^3.14.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.13.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
