--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,14 @@ python = "^3.10"
 django = "^4.2.1"
 psycopg2 = "^2.9.6"
 djangorestframework = "^3.14.0"
+pyyaml = "^6.0"
+uritemplate = "^4.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.13.2"
+black = "^23.3.0"
+factory-boy = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
